# yaqd-proxr

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-mypy.yml  run-entry-points.yml
yaqd_proxr/: __init__.py  _proxr_serial.py  proxr-serial.avpr  proxr-serial.toml
