[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqd-proxr"
authors = ["Blaise Thompson, Unni Kurumbail"]
description = "Yaq daemons for ProXR relay controllers."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "yaqd-core>=2020.06.3",
]
dynamic = ["version"]
license="LGPL-3.0-only"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Home Page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-proxr"
Issues = "https://github.com/yaq-project/yaqd-proxr/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-proxr-serial = "yaqd_proxr._proxr_serial:ProxrSerial.main"

[tool.hatch.version]
path = "yaqd_proxr/__version__.py"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py10', 'py11']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
